# src/top/api/main.py
@@ -1,4 +1,4 @@
-# Copyright 2021 - 2024 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
+# Copyright 2021 - 2025Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
 # for the German Human Genome-Phenome Archive (GHGA)
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,14 +19,23 @@ import logging
 from enum import Enum
 from typing import Annotated
 
-from fastapi import FastAPI, HTTPException, Request, Response, Security, status
+from fastapi import (
+    FastAPI,
+    Form,
+    HTTPException,
+    Request,
+    Response,
+    Security,
+    status,
+)
+from fastapi.responses import RedirectResponse
 from fastapi.security import HTTPAuthorizationCredentials, HTTPBearer
 from ghga_service_commons.api import configure_app
 from pydantic import AnyHttpUrl
 
 from ..config import CONFIG
 from ..core.http_utils import get_original_url
-from ..core.models import LoginInfo, OidcConfiguration, UserInfo
+from ..core.models import LoginInfo, OidcConfiguration, TokenResponse, UserInfo
 from ..core.oidc_provider import Jwks, OidcProvider
 
 log = logging.getLogger(__name__)
@@ -62,9 +71,13 @@ async def get_openid_configuration(request: Request) -> OidcConfiguration:
     # remove the current route to get the base URL
     base_url = original_url.removesuffix(".well-known/openid-configuration")
     # construct the other URLs from the base URL
+    authorization_endpoint = AnyHttpUrl(base_url + "authorize")
+    token_endpoint = AnyHttpUrl(base_url + "token")
     userinfo_endpoint = AnyHttpUrl(base_url + "userinfo")
     jwks_uri = AnyHttpUrl(base_url + "jwks")
     return OidcConfiguration(
+        authorization_endpoint=authorization_endpoint,
+        token_endpoint=token_endpoint,
         userinfo_endpoint=userinfo_endpoint,
         issuer=CONFIG.issuer,
         jwks_uri=jwks_uri,
@@ -111,6 +124,81 @@ async def login(login_info: LoginInfo) -> Response:
     return Response(
         content=token, media_type="application/jwt", status_code=status.HTTP_201_CREATED
     )
+
+
+@app.get(
+    "/authorize",
+    summary="OIDC Authorization Endpoint",
+    tags=tags,
+    status_code=status.HTTP_302_FOUND,
+    responses={
+        status.HTTP_302_FOUND: {"description": "Redirected back to client."},
+        status.HTTP_422_UNPROCESSABLE_ENTITY: {
+            "description": "Validation error in submitted data."
+        },
+    },
+)
+async def authorize(
+    response_type: str,
+    client_id: str,
+    redirect_uri: str,
+    scope: str,
+    state: str,
+) -> RedirectResponse:
+    """The authorization endpoint of the test OP.
+
+    This authorizes the last logged in test user without checking credentials.
+    """
+    try:
+        url = oidc_provider.authorize(
+            response_type=response_type,
+            client_id=client_id,
+            redirect_uri=redirect_uri,
+            scope=scope,
+            state=state,
+        )
+    except ValueError as error:
+        raise HTTPException(
+            status_code=status.HTTP_400_BAD_REQUEST,
+        ) from error
+    # Redirect back with code and state or error message
+    return RedirectResponse(url=url, status_code=status.HTTP_302_FOUND)
+
+
+@app.post(
+    "/token",
+    summary="OIDC Token Endpoint",
+    tags=tags,
+    status_code=status.HTTP_200_OK,
+    responses={
+        status.HTTP_200_OK: {
+            "model": TokenResponse,
+            "description": "Access token has been granted.",
+        },
+        status.HTTP_400_BAD_REQUEST: {"description": "Error in submitted data."},
+        status.HTTP_422_UNPROCESSABLE_ENTITY: {
+            "description": "Validation error in submitted data."
+        },
+    },
+)
+async def token(
+    grant_type: str = Form(""),
+    code: str = Form(""),
+    redirect_uri: str = Form(""),
+    client_id: str = Form(""),
+) -> TokenResponse:
+    """The token endpoint of the test OP."""
+    try:
+        return oidc_provider.token(
+            grant_type=grant_type,
+            code=code,
+            redirect_uri=redirect_uri,
+            client_id=client_id,
+        )
+    except ValueError as error:
+        raise HTTPException(
+            status_code=status.HTTP_400_BAD_REQUEST,
+        ) from error
 
 
 @app.get(
